# PyTest_004_Task_Manager_MySQL

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yml
src/: task_manager_mysql_p2.py
src/task_manager_mysql/: __init__.py  task_manager_mysql_p2.py
tests/: conftest.py  test_task_manager_mysql_p2.py
