[project]
name = "task_manager_mysql"
version = "1.2.1"
description = "Aplikace pro správu úkolů s MySQL a automatizovanými testy v PyTest."
authors = [
    { name = "Jana Staňková" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mysql-connector-python",
    "python-dotenv",
    "pytest"
]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
markers = [
    "positive: pozitivní testovací scénáře",
    "negative: negativní testovací scénáře"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
task_manager_mysql = ["*.py"]
