[metadata]
name = task_manager_mysql
version = 1.2.1
author = Jana Staňková
license = MIT
description = Aplikace Task Manager – Python + MySQL

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[tool:pytest]
addopts = -v --tb=short
testpaths = tests

[flake8]
max-line-length = 120
exclude = .git,__pycache__,build,dist


